<resources>
    <string name="app_name">PnProgram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">simplePnP</string>
    <string name="nav_header_subtitle">Choose wisely!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_character">Character</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_notepad">Notepad</string>
    <string name="menu_settings">Settings</string>
</resources>