<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_summary">

    <fragment
        android:id="@+id/nav_summary"
        android:name="com.example.pnprogram.ui.summary.SummaryFragment"
        android:label="@string/menu_summary"
        tools:layout="@layout/fragment_summary" >

        <action
            android:id="@+id/action_summary_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_character"
        android:name="com.example.pnprogram.ui.character.CharacterFragment"
        android:label="@string/menu_character"
        tools:layout="@layout/fragment_character" >

        <action
            android:id="@+id/action_character_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.pnprogram.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" >

        <action
            android:id="@+id/action_inventory_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_notepad"
        android:name="com.example.pnprogram.ui.notepad.NotepadFragment"
        android:label="@string/menu_notepad"
        tools:layout="@layout/fragment_notepad" >

        <action
            android:id="@+id/action_notepad_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pnprogram.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>